[package]
name = "plumcast"
version = "0.1.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]

[dependencies]
atomic_immut = "0.1"
bytecodec = "0.4"
fibers = "0.1"
fibers_rpc = "0.2"
futures = "0.1"
hyparview = "0.0"
slog = "2"
plumtree = "0.0"
rand = "0.5"
trackable = "0.2"

[dev-dependencies]
clap = "2"
sloggers = "0.2"
