[package]
name = "plumcast"
version = "0.0.3"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A message broadcasting library based on the Plumtree/HyParView algorithms"
homepage = "https://github.com/sile/plumcast"
repository = "https://github.com/sile/plumcast"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = {repository = "sile/plumcast"}
codecov = {repository = "sile/plumcast"}

[dependencies]
atomic_immut = "0.1"
bytecodec = "0.4"
fibers = "0.1"
fibers_rpc = "0.2"
futures = "0.1"
hyparview = "0.1"
slog = "2"
plumtree = "0.0"
prometrics = "0.1"
rand = "0.5"
trackable = "0.2"

[dev-dependencies]
clap = "2"
sloggers = "0.2"
